.metadata/.plugins/org.eclipse.cdt.ui/STM32F429I_Touch.build.log
18:28:02 **** Incremental Build of configuration Debug for project STM32F429I_Touch ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/image04.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DDEBUG -DSTM32F429xx -c -I../Drivers/CMSIS/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Core/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/image04.d" -MT"Core/Src/image04.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/image04.o"
arm-none-eabi-gcc "../Core/Src/ltdc.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DDEBUG -DSTM32F429xx -c -I../Drivers/CMSIS/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Core/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/ltdc.d" -MT"Core/Src/ltdc.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/ltdc.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DDEBUG -DSTM32F429xx -c -I../Drivers/CMSIS/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Core/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/image04.c:33:7: error: unknown type name 'uint16_t'
 const uint16_t image04[] = {
       ^~~~~~~~
../Core/Src/main.c:43:10: fatal error: stm324x9i_sdram.h: No such file or directory
 #include "stm324x9i_sdram.h"
          ^~~~~~~~~~~~~~~~~~~
compilation terminated.
make: *** [Core/Src/subdir.mk:66: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
make: *** [Core/Src/subdir.mk:62: Core/Src/image04.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

18:28:04 Build Failed. 5 errors, 0 warnings. (took 1s.922ms)

